# structa

./: README.md  pyproject.toml  structa.toml
src/structa/: cli.py
src/structa/core/: engine.py  generator.py  presets.py  registry.py
src/structa/paradigms/: base.py  ddd.py
